--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,4 @@
 {
-    "plugins": [
-        ["transform-runtime", {
-            "polyfill": false,
-            "regenerator": true
-        }]
-    ],
-    "presets": [
-        "es2015",
-        "react",
-        "env",
-        "stage-0"
-    ]
+  "plugins": ["transform-class-properties"],
+  "presets": ["react", "es2015", "stage-1"]
 }
