--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "React slider",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --colors --mode development",
-    "dev": "webpack -p --progress --colors --mode development",
-    "build": "webpack -p --progress --colors --mode production",
-    "test": "BABEL_JEST_STAGE=0 jest",
-    "lint": "eslint app/** __tests__/**",
-    "fix": "eslint app/** __tests__/** --fix",
-    "bundle-analyze": "webpack --profile --json > stats.json && webpack-bundle-analyzer ./stats.json"
+    "build": "yarn webpack --env.env=prod",
+    "dev": "yarn webpack --env.env=dev",
+    "watch": "yarn webpack --watch --env.env=dev"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+        "browser": true,
+        "jasmine": true
+    },
+    "extends": [
+        "xo-react/space",
+        "xo-space/esnext"
+    ],
+    "parser": "babel-eslint"
   },
   "keywords": {
     "keywords": [
@@ -21,69 +29,25 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://example.com"
-  },
-  "jest": {
-    "unmockedModulePathPatterns": [
-      "<rootDir>/node_modules/react",
-      "<rootDir>/node_modules/react-dom",
-      "<rootDir>/node_modules/react-addons-test-utils"
-    ],
-    "transform": {
-      "^.+\\.jsx?$": "babel-jest"
-    },
-    "moduleFileExtensions": [
-      "js",
-      "json"
-    ],
-    "setupFiles": [
-      "raf/polyfill"
-    ]
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^7.1.4",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.26.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.7.0",
-    "jest-cli": "^22.4.3",
-    "json-loader": "^0.5.4",
-    "postcss-loader": "^1.3.1",
-    "prettier": "^1.11.1",
-    "raf": "^3.4.0",
-    "sass-loader": "^6.0.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^4.5.0",
-    "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.1"
+    "url": "https://github.com/nadiein"
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.5",
     "@fortawesome/fontawesome-free-solid": "^5.0.10",
     "@fortawesome/react-fontawesome": "^0.0.18",
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-runtime": "^6.26.0",
     "bootstrap": "^4.0.0",
     "classnames": "^2.2.5",
-    "history": "^4.7.2",
     "immutable": "^3.8.2",
     "material-ui": "^1.0.0-beta.40",
     "material-ui-icons": "^1.0.0-beta.36",
-    "node-sass": "^4.8.3",
+    "prop-types": "^15.6.1",
+    "ramda": "^0.23.0",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "copy-webpack-plugin": "^4.5.1",
+    "eslint": "^4.19.1",
+    "eslint-config-react": "^1.1.7",
+    "npm": "^5.8.0",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "prop-types": "^15.6.1",
     "ramda": "^0.23.0",
     "react": "^16.3.1",
@@ -93,6 +57,58 @@
     "react-tap-event-plugin": "^3.0.2",
     "reactstrap": "^5.0.0-beta.3",
     "superagent": "^3.8.2",
-    "url-loader": "^1.0.1"
+    "url-loader": "^1.0.1",
+    "webpack": "^3.5.5",
+    "webpack-merge": "^4.1.0"
+  },
+  "devDependencies": {
+    "@types/react": "^16.3.0",
+    "@types/react-addons-test-utils": "^0.14.21",
+    "@types/react-dom": "^16.0.4",
+    "autoprefixer": "^6.7.3",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-istanbul": "^4.1.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "browser-sync": "^2.23.6",
+    "browser-sync-spa": "^1.0.3",
+    "css-loader": "^0.26.1",
+    "del": "^2.2.2",
+    "es6-shim": "^0.35.3",
+    "eslint-config-xo-react": "^0.10.0",
+    "eslint-config-xo-space": "^0.15.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-babel": "^4.0.1",
+    "eslint-plugin-react": "^6.10.0",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "gulp": "github:gulpjs/gulp#4ed9a4a3275559c73a396eff7e1fde3824951ebb",
+    "gulp-filter": "^5.1.0",
+    "gulp-hub": "github:frankwallis/gulp-hub#d461b9c700df9010d0a8694e4af1fb96d9f38bf4",
+    "gulp-sass": "^3.2.1",
+    "gulp-util": "^3.0.8",
+    "html-webpack-plugin": "^3.2.0",
+    "jasmine": "^2.99.0",
+    "json-loader": "^0.5.4",
+    "karma": "^1.4.1",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-junit-reporter": "^1.2.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-phantomjs-shim": "^1.4.0",
+    "karma-webpack": "^2.0.13",
+    "node-sass": "^4.8.3",
+    "phantomjs-prebuilt": "^2.1.14",
+    "postcss-loader": "^1.3.1",
+    "react-addons-test-utils": "^15.4.2",
+    "react-hot-loader": "^3.1.3",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.18.2",
+    "webpack-cli": "^2.0.13",
+    "webpack-merge": "^4.1.0"
   }
 }
